--- a/html/Maintenance/Aileron and Flap Bellcranks and Supports.html
+++ b/html/Maintenance/Aileron and Flap Bellcranks and Supports.html
@@ -1,19 +1,65 @@
-<p>The Aileron Idler under the cockpit floor is p/n 70510-1 and is interchangeable right to left. These bellcranks have Fafnir KP6A bearings installed with a 70081-2 stainless spacer that allows the AN43B-24A eyebolt that connect the bellcrank to the support frame assembly to be fully torqued (100 inch-pounds at the nut). </p>
+<p>The Aileron Idler under the cockpit floor is p/n 70510-1 and is interchangeable right to left. These bellcranks have
+    Fafnir KP6A bearings installed with a 70081-2 stainless spacer that allows the AN43B-24A eyebolt that connect the
+    bellcrank to the support frame assembly to be fully torqued (100 inch-pounds at the nut). </p>
 
-<p>The KP6A bearings are sealed and require no lubrication. Some end play will develop due to tolerance accumulation, but up to .040" is acceptable. </p>
+<p>The KP6A bearings are sealed and require no lubrication. Some end play will develop due to tolerance accumulation,
+    but up to .040" is acceptable. </p>
 
-<p>The aileron bellcranks in the wings are attached to a welded structure with an AN4-46A bolt.  These have a p/n 70081-3 stainless spacer to allow full bolt torque. Bearings are Fafnir KP6A. The wing bellcranks are p/n 700511-1 (L/H) and 70511-2 (R/H). Maximum end play of the wing bellcrank is .03". The bolt attaching the wing bellcranks may be reached by removing the plug buttons (11/16) on the top and bottom wing skins. To remove the bellcrank from the wing it is necessary to remove some rivets attaching the lower wing skin. Remove only rivets that can be easily reached with a bucking bar for re-installation. </p>
+<p>The aileron bellcranks in the wings are attached to a welded structure with an AN4-46A bolt. These have a p/n 70081-3
+    stainless spacer to allow full bolt torque. Bearings are Fafnir KP6A. The wing bellcranks are p/n 700511-1 (L/H) and
+    70511-2 (R/H). Maximum end play of the wing bellcrank is .03". The bolt attaching the wing bellcranks may be reached
+    by removing the plug buttons (11/16) on the top and bottom wing skins. To remove the bellcrank from the wing it is
+    necessary to remove some rivets attaching the lower wing skin. Remove only rivets that can be easily reached with a
+    bucking bar for re-installation. </p>
 
-<p>The lower aileron torque tube beneath the cockpit floor is p/n 70509-1 (for s/n 802-0001 thru 802-0076 and 802A-0003 thru 802A-0073) or p/n 71021-1 (for s/n 802-0077 and subs and 802A-0074 and subs) and is supported on each end by p/n 70721-1 housings, which contain the B1212 Torrington needle bearings. There is a grease fitting on each end of the torque tube to allow greasing the Torrington bearings with General Purpose grease. Pushrods from the lower torque tube to the Idlers are p/n 70554-1 and have Fafnir RE4F6-2 bearings that may be adjusted on each end. The two centering springs are p/n 40044-1.</p>
+<p>The lower aileron torque tube beneath the cockpit floor is p/n 70509-1 (for s/n 802-0001 thru 802-0076 and 802A-0003
+    thru 802A-0073) or p/n 71021-1 (for s/n 802-0077 and subs and 802A-0074 and subs) and is supported on each end by
+    p/n 70721-1 housings, which contain the B1212 Torrington needle bearings. There is a grease fitting on each end of
+    the torque tube to allow greasing the Torrington bearings with General Purpose grease. Pushrods from the lower
+    torque tube to the Idlers are p/n 70554-1 and have Fafnir RE4F6-2 bearings that may be adjusted on each end. The two
+    centering springs are p/n 40044-1.</p>
 
-<p>The flap torque tube is attached to the fuselage frame with two AN4-10A bolts. The bearings, which are pressed into the torque tube fittings and staked, are NMB p/n MS14104-4. These are spherical bearings with a stainless ball and a Teflon lining. As this type of bearing has some drag, be sure the AN4-10A attach bolts are fully torqued to 100 inch-pounds at the nut. These bearings do not require lubrication. The 2.5" diameter flap torque tube consists of the welded assembly and bearings only. At the extreme end of each side of the torque tube is a 3/8" thick aluminum arm (p/n 70027-4), which also has a NMB p/n MS14104-4 bearing installed. The two flap push-rods attach to the bearings with AN4-11A bolts and should be torqued to 100 inch-pounds at the nut. </p>
+<p>The flap torque tube is attached to the fuselage frame with two AN4-10A bolts. The bearings, which are pressed into
+    the torque tube fittings and staked, are NMB p/n MS14104-4. These are spherical bearings with a stainless ball and a
+    Teflon lining. As this type of bearing has some drag, be sure the AN4-10A attach bolts are fully torqued to 100
+    inch-pounds at the nut. These bearings do not require lubrication. The 2.5" diameter flap torque tube consists of
+    the welded assembly and bearings only. At the extreme end of each side of the torque tube is a 3/8" thick aluminum
+    arm (p/n 70027-4), which also has a NMB p/n MS14104-4 bearing installed. The two flap push-rods attach to the
+    bearings with AN4-11A bolts and should be torqued to 100 inch-pounds at the nut. </p>
 
-<p>With the AN4-12A bolts pointing inboard, the correct order of parts would be a AN970-4 washer under the bolt head, then a AN960-416L washer, then the bearing, then a AN960-416 washer, then the aluminum aileron hinge, then a AN960-416 washer, then a AN365-428 nut. The steel inboard hinge uses a AN4-25A bolt, with a AN960-416 bolt, with a AN960-416 washer under the head, then a AN970-4 washer, then the bearing, then the steel hinge, then a AN9670-416 washer, then a AN365-428 nut. Leave the push-rod attached to the aileron and reach through the inspection plate opening and remove the bolt attaching the push-rod to the wing bellcrank. Be sure to have someone holding up on the aileron trailing edge, and the control stick lock should be in place. Then remove the center hinge bolt, with someone at each end of the aileron, remove the two outboard bolts, lift up on the push-rod to keep it from dragging, and remove the aileron from the aircraft.</p>
+<p>With the AN4-12A bolts pointing inboard, the correct order of parts would be a AN970-4 washer under the bolt head,
+    then a AN960-416L washer, then the bearing, then a AN960-416 washer, then the aluminum aileron hinge, then a
+    AN960-416 washer, then a AN365-428 nut. The steel inboard hinge uses a AN4-25A bolt, with a AN960-416 bolt, with a
+    AN960-416 washer under the head, then a AN970-4 washer, then the bearing, then the steel hinge, then a AN9670-416
+    washer, then a AN365-428 nut. Leave the push-rod attached to the aileron and reach through the inspection plate
+    opening and remove the bolt attaching the push-rod to the wing bellcrank. Be sure to have someone holding up on the
+    aileron trailing edge, and the control stick lock should be in place. Then remove the center hinge bolt, with
+    someone at each end of the aileron, remove the two outboard bolts, lift up on the push-rod to keep it from dragging,
+    and remove the aileron from the aircraft.</p>
 
-<p> counterweight support tube is p/n 20279-2 and can be removed from the aileron by removing the two plug buttons on the upper and lower side of the aileron nose skin and removing the AN3-12A bolt that attaches the support tube to the support structure that is riveted to the aileron. The counterweight and support tube can then be taken to the workbench where the long AN3-35A bolt is removed. Leaving the parts together, clamp the counterweight to the base of the drill-press, using a long 3/16" drill bit chucked in the drill press align the spindle with the 3/16 hole through the counterweight and support tube. Then change to a 7/32" drill bit and enlarge the hole. Then ream .248 through both parts. Grease the new AN4-35A bolt and install.  Re-install the counterweight and support tube on the aileron and check for a snug fit. As you install the counterweight, bond it to the leading edge of the aileron with PR1422A2. The AN3 bolts have a torque of 60 inch-pounds applied at the nut, the AN4 bolts have a torque of 100 inch-pounds applied at the nut. Re-install the aileron in the reverse orders as removed, taking care that the washer arrangement is correct. The bolt through the push rod and wing bellcrank is an AN4-12A with an AN960-416 washer under the head and one under the AN365-428A nut. </p>
+<p> The counterweight support tube is p/n 20279-2 and can be removed from the aileron by removing the two plug buttons on
+    the upper and lower side of the aileron nose skin and removing the AN3-12A bolt that attaches the support tube to
+    the support structure that is riveted to the aileron. The counterweight and support tube can then be taken to the
+    workbench where the long AN3-35A bolt is removed. Leaving the parts together, clamp the counterweight to the base of
+    the drill-press, using a long 3/16" drill bit chucked in the drill press align the spindle with the 3/16 hole
+    through the counterweight and support tube. Then change to a 7/32" drill bit and enlarge the hole. Then ream .248
+    through both parts. Grease the new AN4-35A bolt and install. Re-install the counterweight and support tube on the
+    aileron and check for a snug fit. As you install the counterweight, bond it to the leading edge of the aileron with
+    PR1422A2. The AN3 bolts have a torque of 60 inch-pounds applied at the nut, the AN4 bolts have a torque of 100
+    inch-pounds applied at the nut. Re-install the aileron in the reverse orders as removed, taking care that the washer
+    arrangement is correct. The bolt through the push rod and wing bellcrank is an AN4-12A with an AN960-416 washer
+    under the head and one under the AN365-428A nut. </p>
 
-<p>While the aileron is removed, check the aluminum hinges for secure attachment to the spar, and check the steel hinge for signs of corrosion, of loose rivets, or cracks in the welded areas. Inspect both ends of the push-rods for cracks in the threads, check the rod-end bearing (Fafnir RE4F6-2) for condition and lubrication, and be sure the check nut against the bearing is snug. </p>
+<p>While the aileron is removed, check the aluminum hinges for secure attachment to the spar, and check the steel hinge
+    for signs of corrosion, of loose rivets, or cracks in the welded areas. Inspect both ends of the push-rods for
+    cracks in the threads, check the rod-end bearing (Fafnir RE4F6-2) for condition and lubrication, and be sure the
+    check nut against the bearing is snug. </p>
 
-<p>After the aileron has been re-installed and an inspection of all connections has been made, reach through the inspection plate opening and check to see if the push rod is free to rotate slightly as the aileron is moved through the full range of travel. After being sure the bolt through the push-rod and wing bellcrank has been torqued, re-install the inspection plate with the four screws.</p>
+<p>After the aileron has been re-installed and an inspection of all connections has been made, reach through the
+    inspection plate opening and check to see if the push rod is free to rotate slightly as the aileron is moved through
+    the full range of travel. After being sure the bolt through the push-rod and wing bellcrank has been torqued,
+    re-install the inspection plate with the four screws.</p>
 
-<p>The bearings in the aileron support arms are Fafnir KP4 and make a press-fit into the 3/8" aluminum arm, and are staked on both sides. These bearings are sealed, require no lubrication, and should not require replacement in service. </p>
+<p>The bearings in the aileron support arms are Fafnir KP4 and make a press-fit into the 3/8" aluminum arm, and are
+    staked on both sides. These bearings are sealed, require no lubrication, and should not require replacement in
+    service. </p>
