ac drive pad initial

--- a/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
+++ b/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
@@ -13,19 +13,15 @@
   <tr>
     <td class="cellInspectionNumber">AC3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check oil level in air conditioner compressor drive pad. (S/N -0001 through -0035 if
-      equipped with 51628-1 Compressor Drive installed).</td>
+    <td class="cellInspectionText">Check oil level in air conditioner compressor drive pad. (If
+      equipped with 51628-1 oil bath compressor drive)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">AC101</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect drive pad quill shaft and grease quill shaft splines per Service Letter #158
-      and Service Letter #170. </td>
-  </tr>
-  <tr>
-    <td class="cellInspectionNumber">AC201</td>
-    <td class="cellInspectionInterval">(800)</td>
-    <td class="cellInspectionText">Replace drive pad bearings.</td>
+    <td class="cellInspectionText">Inspect and lubricate drive pad per 
+      <xref sectionTarget="2.50.41" prependLabel="Section">Cross Reference Placeholder</xref>.
+      (Ref SL158 and SL170)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">AC501</td>
@@ -37,7 +33,7 @@
   <tr>
     <td class="cellInspectionNumber">AC502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Change oil in air conditioner compressor drive pad. (S/N -0001 through -0035 if
-      equipped with 51628-1 Compressor Drive installed).</td>
+    <td class="cellInspectionText">Change oil in air conditioner compressor drive pad. (If
+      equipped with 51628-1 oil bath compressor drive)</td>
   </tr>
 </table>
