--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -66,4 +66,10 @@
         <td class="plainTableNormalCell">3000 Hours</td>
         <td class="plainTableNormalCell">SL129</td>
     </tr>
+        <tr>
+        <td class="plainTableNormalCell">51628-X</td>
+        <td class="plainTableNormalCell">Overhaul Air Conditioner Drive Pad Assembly</td>
+        <td class="plainTableNormalCell">800 Hours</td>
+        <td class="plainTableNormalCell">SL170 and <xref sectionTarget="2.50.42">Cross Reference Placeholder</xref></td>
+    </tr>
 </table>
