--- a/html/Maintenance/Air Conditioner Drive Pad.html
+++ b/html/Maintenance/Air Conditioner Drive Pad.html
@@ -1,1 +1,77 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>The engine drive pad used to drive the air conditioner compressor is drive pad "C".</p>
+<p>There have been three types of engine drive pads.</p>
+<ul>
+    <li>"Unsealed"??? Dry spline</li>
+    <li>"Unsealed" wet spline</li>
+    <li>"Sealed" wet spline</li>
+</ul>
+<p>The term "dry" or "wet" refers to the spline inside the drive pad that the quill shaft engages with.</p>
+<p>The term "sealed" and "unsealed" refers the pad being designed to accommodate rotating seals the are intended to keep
+    engine oil inside the engine side of the drive pad.</p>
+
+<figure>
+    <img class="imageCentered_4x4" src="img/img_AcDrySpline.png">
+    <figcaption class="centerText">Dry Spline</figcaption>
+</figure>
+
+<p>Dry splines are designed to be packed with grease where shown in 
+    <xref fileTarget="img_AcDrySpline.png">Cross Reference Placeholder</xref>.
+</p>
+<p>Wet splines (inside the drive pad) are lubricated with engine oil.</p>
+
+<p>The "unsealed" drive pad configuration is disadvantageous because of its tendency to waste engine oil through the
+    drive pad.</p>
+
+<p>The engine build spec can be used to determine if the engine has or has been converted to a "sealed" type. For
+    example, a PT6A-67F will have a "sealed" drive pad if the build spec is BS1309 or later.</p>
+
+<p style="color:red">BUILD SPEC TABLE WOULD GO WELL HERE</p>
+
+<p>There are two primary types of drive pad assemblies that bolt onto the engine's drive pad.</p>
+<ul>
+    <li>with unsealed bearings and oil bath</li>
+    <li>with sealed bearings
+        <ul>
+            <li>quill shaft without o-rings for unsealed drive pad</li>
+            <li>quill shaft with o-rings for sealed drive pad</li>
+
+        </ul>
+    </li>
+</ul>
+
+<p>51628-1 is lubricated with engine oil and contains an internal bath. Bearing damage will occur if they are not
+    properly lubricated with oil. This drive pad assembly may only be used on "unsealed" drive pads.</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_DrivePadAssembly_1.png">
+    <figcaption class="centerText">51628-1 Drive Pad Assembly</figcaption>
+</figure>
+
+<p>51628-31 and -34 use sealed bearings and do not require a oil bath. These assemblies both use the 51640-1 quill shaft
+    which does not provide an o-ring to keep oil from migrating from the engine into the drive pad and are for use on
+    engines with "unsealed" drive pads.</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_DrivePadAssembly_31.png">
+    <figcaption class="centerText">51628-31 Drive Pad Assembly with Sealed Bearings</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_DrivePadAssembly_34.png">
+    <figcaption class="centerText">51628-34 Drive Pad Assembly with Sealed Bearings and Integral Pulley</figcaption>
+</figure>
+
+<p>51628-32 and -35 also use sealed bearings and do not require an oil bath. These assemblies are for use with "sealed"
+    drive pads and use the 51640-2 quill shaft which provides a sealing o-ring.</p>
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_DrivePadAssembly_32.png">
+    <figcaption class="centerText">51628-32 Drive Pad Assembly with Sealed Bearings and O-Ring</figcaption>
+</figure> 
+
+<figure>
+    <img class="imageCentered_6x4" src="img/img_DrivePadAssembly_35.png">
+    <figcaption class="centerText">51628-35 Drive Pad Assembly with Sealed Bearings, Integral Pulley and O-Ring</figcaption>
+</figure> 
+
+<p>The 51628-34 and -35 drive pad assemblies provide a more robust drive shaft which incorporates the pulley.</p>
