moved drive pad overhaul from recommended to suggested

--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -63,10 +63,10 @@
         <td class="plainTableNormalCell">Service Letter #212</td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">Part number?</td>
-        <td class="plainTableNormalCell">AC drive pad overhaul</td>
-        <td class="plainTableNormalCell">800 hours</td>
-        <td class="plainTableNormalCell">SL 170</td>
+        <td class="plainTableNormalCell">51628-X</td>
+        <td class="plainTableNormalCell">Overhaul Air Conditioner Drive Pad Assembly</td>
+        <td class="plainTableNormalCell">800 Hours</td>
+        <td class="plainTableNormalCell">SL170 and <xref sectionTarget="2.50.42">Cross Reference Placeholder</xref></td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">500702-403 or -407</td>
