--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -66,4 +66,10 @@
         <td class="plainTableNormalCell">3000 Hours</td>
         <td class="plainTableNormalCell">SL129</td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">53474-1</td>
+        <td class="plainTableNormalCell">Air Filter</td>
+        <td class="plainTableNormalCell">15 Cleaning and Oiling Cycles</td>
+        <td class="plainTableNormalCell">OM Supplement 04-0167, <xref sectionTarget="2.50.50" prependLabel="Section">Cross Reference Placeholder</xref></td>
+    </tr>
 </table>
