--- a/html/Maintenance/Special Tools and Equipment.html
+++ b/html/Maintenance/Special Tools and Equipment.html
@@ -32,4 +32,10 @@
         <td class="plainTableNormalCell">Bearing Removal Tool for 40260 Tail Wheels</td>
         <td class="plainTableNormalCell"><xref sectionTarget="2.90.5" xrefType="link" prependLabel="Section">Cross Reference Placeholder</xref></td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">WS3N</td>
+        <td class="plainTableNormalCell">Crescent Tools</td>
+        <td class="plainTableNormalCell">Hand Seamer</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.50.50" xrefType="link" prependLabel="Section">Cross Reference Placeholder</xref></td>
+    </tr>
 </table>
