add kit part numbers

--- a/html/Maintenance/Ferry Fuel System.html
+++ b/html/Maintenance/Ferry Fuel System.html
@@ -144,3 +144,9 @@
         Install spray pump, spray plumbing, and brake cable in reverse order of removal.
     </li>
 </ol>
+
+
+<p><b>Ferry Fuel Kits</b></p>
+
+<p>Air Tractor offers kits that can be used to implement the ferry fuel system.</p>
+<p>Firefighting aircraft use the 50280-19-800 kit while agricultural aircraft use the 50280-26-800 kit.  Contact Air Tractor Customer Service to obtain these kits.</p>
