updated center splice inspection per SL411

--- a/html/Maintenance/Wing Center Splice Connection.html
+++ b/html/Maintenance/Wing Center Splice Connection.html
@@ -9,7 +9,7 @@
 
 <p>The tube-nut and sleeve installation is to take the “kick-load" imposed by dihedral angle and cancel it out by transferring this load from the upper spar caps to the lower spar caps. </p>
 
-<p>To remove the wings, or to inspect the wing center splice connection properly, the front hopper should be removed. </p>
+
 
 <p>Torque values should be checked on the nuts to learn if the bolts have elongated or if fretting has loosened the fit of the joint. Torque values to be checked are as follows: </p>
 
@@ -49,15 +49,38 @@
             <td class="plainTableNormalCell centerText"> 3/4" tube-nut assembly</td>
             <td class="plainTableNormalCell centerText"> 1,920 </td>
         </tr>
-    </table>
+</table>
+<p>Always use a new nut for replacement after a nut is removed. </p>
+
+
 
 <p>There are seven 90050-6-25 bolts through the small leg of each spar cap that attach to the 20994-2 plate on the aft side of the web. On the lower spar caps, there are an additional three 90050-6-22 bolts through the small leg of each cap and seven 90050-6-22 bolts through the spar web plates. These 3/8" nuts are checked for torque (300 inch-pounds). The two NAS1304-26, eight NAS1304-22, and ten NAS1304-25 bolts through the 20994-2 plate and spar have a torque of 100 inch-pounds applied to the nut. The six NAS1305-22 and eight NAS1305-26 bolts have a torque of 200 in -lbs applied at the nut. The two NAS1205-26 screws have a torque of 150 in-lbs applied at the nuts. </p>
 
-<p>Inspect the entire splice connection carefully for signs of bolt working, corrosion, or cracks. The critical area for cracks is the lower spar cap at station 10.3" from the aircraft center-line where the 3/8" NAS bolt attaches the 21082-1 and -2 blocks to the main leg of the cap. If a crack were to develop at that point, it would probably progress out of the 3/8 bolt hole across the cap at station 10.8" where the most inboard of the seven 90050-6-25 bolts are located. The next critical area of the lower spar cap would be in the lock bolt pattern attaching the small leg to the web from approximate stations 25.0" to 30.0" which is where the inboard fuel tank wall is located. It would also be advisable to check carefully the lower side of the main leg in the area where the fuel tank bottom ends. </p>
+<p><b>2000 Hour Center Splice Inspection</b></p>
+<p>This procedure was originally published as SL411 which modified earlier guidance provided in this manual.</p>
+<ul>
+    <li>
+        Remove inspection covers and side skins to gain access to the wing center splice area.
+    </li>
+    <li>
+         With a mirror, borescope, or other appropriate tool, visually inspect the center splice bolts. 
+        Specifically, look for signs of corrosion, bolt damage or looseness, fretting or any other signs 
+        that the center splice may require more in-depth inspection.
+    </li>
+    <li>
+        Inspect the entire splice connection for cracks.  The critical area for cracks is the lower spar cap at station 10.3" from the aircraft center-line where the 3/8" NAS bolt attaches the 21082-1 and -2 blocks to the main leg of the cap. If a crack were to develop at that point, it would probably progress out of the 3/8 bolt hole across the cap at station 10.8" where the most inboard of the seven 90050-6-25 bolts are located. The next critical area of the lower spar cap would be in the lock bolt pattern attaching the small leg to the web from approximate stations 25.0" to 30.0" which is where the inboard fuel tank wall is located. It would also be advisable to check carefully the lower side of the main leg in the area where the fuel tank bottom ends. 
+    </li>
+    <li>
+         If issues are noted that cannot be remedied (corrosion removal and touch up) through the 
+        access holes or side skins, remove the hopper for further inspection and repair.
+    </li>
+</ul>
 
-<p>Always use a new nut for replacement after a nut is removed. </p>
+
 
 <p>For appropriate inspection intervals of the wing center splice connection, see <xref sectionTarget="3.1.13" prependLabel="Section"></xref> of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
+
+<p>To aid in removal of the wings, the front hopper should be removed. </p>
 
 <div class='boxCautionLarge'>
     <p class='boxCautionLargeHeader'>CAUTION</p>
