--- a/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
+++ b/html/Inspection/Insp_DISPERSAL EQUIPMENT.html
@@ -89,6 +89,13 @@
       Letter #248.</td>
   </tr>
   <tr>
+    <td class="cellInspectionNumber">DE17</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">
+      Check the swivel seals/o-rings on control cables for cracking or deterioration.  (Ref. SL404)
+    </td>
+  </tr>
+  <tr>
     <td class="cellInspectionNumber">DE501</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Unplug digital dispersal monitoring gauge, clean contacts with electrical contact
