--- a/html/Inspection/Insp_CONTROL SYSTEM.html
+++ b/html/Inspection/Insp_CONTROL SYSTEM.html
@@ -87,7 +87,7 @@
   <tr>
     <td class="cellInspectionNumber">CS502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Check rudder pedal attach brackets and tube for cracks.</td>
+    <td class="cellInspectionText">Check rudder pedal attach brackets and tube for cracks. (Ref SL395, SL345, SL329)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">CS503</td>
