--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -98,7 +98,8 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and
       cracking as referenced in S/L #198. Check bolt torque and tighten check nuts. (See <xref sectionTarget="2.45.3"
-        prependLabel="Section"></xref>).</td>
+        prependLabel="Section"></xref>). (Ref. SL198, SL383)
+      </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">E502</td>
