--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -13,7 +13,7 @@
   <tr>
     <td class="cellInspectionNumber">F3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check condition of steel hinges and attachments to spar. (Reference S/L #216).</td>
+    <td class="cellInspectionText">Check condition of steel hinges and attachments to spar. (Ref. SL216, SL390).</td>
   </tr>
 
   <tr>
