--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -14,7 +14,8 @@
     <td class="cellInspectionNumber">EM3</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
-      Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or other structure.  (Ref. SL327)
+      Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or
+      other structure. (Ref. SL327)
     </td>
   </tr>
   <tr>
@@ -22,8 +23,9 @@
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
       Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then
-      power lever through range of travel and look for loose connections, binding parts, rubbing, etc.  <b>CAUTION:</b> Do not move power lever into reverse position with engine stopped or controls
-        will be damaged.
+      power lever through range of travel and look for loose connections, binding parts, rubbing, etc. <b>CAUTION:</b>
+      Do not move power lever into reverse position with engine stopped or controls
+      will be damaged.
     </td>
   </tr>
   <tr>
@@ -37,13 +39,15 @@
     <td class="cellInspectionNumber">EM6</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
-      Check the swivel seals/o-rings on propeller, power, fuel condition/shutoff, FCU override, engine alternate air, cockpit heat and auxiliary fuel cables for cracking or deterioration.  (Ref. SL404)
+      Check the swivel seals/o-rings on propeller, power, fuel condition/shutoff, FCU override, engine alternate air,
+      cockpit heat and auxiliary fuel cables for cracking or deterioration. (Ref. SL404)
     </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM7</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Verify that the routing of the flexible Py line does not allow rubbing or chafing on any rotating component or other structure (serial numbers -0001 thru -0555 and -4001 thru -4025).</td>
+    <td class="cellInspectionText">Verify that the routing of the flexible Py line does not allow rubbing or chafing on
+      any rotating component or other structure (serial numbers -0001 thru -0555 and -4001 thru -4025).</td>
   </tr>
 
   <tr>
@@ -63,15 +67,18 @@
     <td class="cellInspectionNumber">EM103</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">
-      Examine engine mount for cracks and corrosion per <xref fileTarget="html/Maintenance/Engine Mount Inspection.html" prependLabel="Section"></xref>, and 
-      check torque at firewall connections.  Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts.  Reinstall safety wire and cotter pins.
+      Examine engine mount for cracks and corrosion per <xref fileTarget="html/Maintenance/Engine Mount Inspection.html"
+        prependLabel="Section"></xref>, and
+      check torque at firewall connections. Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of
+      lower bolts. Reinstall safety wire and cotter pins.
       (Ref. SL253, SL299 and SL335)
     </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM104</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).  (Ref. SL173)</td>
+    <td class="cellInspectionText">Inspect FCU to fuel nozzle manifold tubing for chafing. (S/N -0001- through -0073).
+      (Ref. SL173)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM501</td>
@@ -81,23 +88,21 @@
   <tr>
     <td class="cellInspectionNumber">EM502</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect SCEET compressor discharge and starter/generator cooling tubes for delamination (as equipped).  (Ref. SL397)</td>
+    <td class="cellInspectionText">Inspect SCEET tubes for delamination (as equipped: specifically starter/generator
+      cooling). (Ref. SL397)</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM503</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">
       Verify calibration of engine instruments per
-       <xref fileTarget="html/Maintenance/Analog Engine Instrument Calibration.html" prependLabel="Section"></xref>
-       and
-       <xref fileTarget="html/Maintenance/MVP50T Engine Instrument Calibration.html" prependLabel="Section"></xref>
-      .</td>
+      <xref fileTarget="html/Maintenance/Analog Engine Instrument Calibration.html" prependLabel="Section"></xref>
+      and
+      <xref fileTarget="html/Maintenance/MVP50T Engine Instrument Calibration.html" prependLabel="Section"></xref>
+      .
+    </td>
   </tr>
-  <tr>
-    <td class="cellInspectionNumber">EM504</td>
-    <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect SCEET compressor discharge and starter/generator cooling tubes for delamination - as equipped: PT6-powered models with external engine compressor discharge system.( -65 series and -67 series engines have internal compressor discharge and are not applicable). All Air Tractor turbine models with optional 51207 Starter Generator Cooling Installation.</td>
-  </tr>
+
 
 
 </table>
