missing figure and added free play limit

--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -1,4 +1,8 @@
-<p>Details of the elevator trim tab cockpit controls are shown in <b> Figure 8</b>.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
+<p>Details of the elevator trim tab cockpit controls are shown in <xref fileTarget="img_ElevatorTrimControls.png">Cross Reference Placeholder</xref>.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
+<figure>
+    <img class="imageCentered_6x4" src="img/img_ElevatorTrimControls.png">
+    <figcaption class="centerText">Elevator Trim Controls</figcaption>
+</figure>
 
 <p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown below in <xref fileTarget="img_Fig_18.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
@@ -24,3 +28,7 @@
 <p>The push-rods from the trim bellcrank to the idler arm on the stabilizer rear spar are p/n 70532-1 and are adjustable. The ends are AN485-4 clevis ends with AN316-4 check nuts Attachments are with AN3-6 bolts, AN310-3 nuts, AN960-10 washers, and MS24665-151 cotters.  The push-rods going forward from the bellcrank is p/n 70756-1 and has a Fafnir REB3N bearing attached to the bellcrank with a AN3-7A bolt, AN970-3 washer under the bolt head, AN960-10L washer under the AN365-1032 nut. </p>
 
 <p>Fairleads are p/n 70122-1 with 40081-00 snap rings. The forward end going into the cockpit connects to the top hole in the trim lever with the same hardware as connecting to the trim bellcrank. </p>
+
+<p><b>Maximum Tab Free Play</b></p>
+<p>Air Tractor evaluated the elevator tab for flutter.  The criteria for free play of the elevator tab (or any other tab) is 2.5%  of the tab's chord from the hinge to the tip.</p>
+<p>For the AT-802 elevator trim tab, the maximum free play, which includes all bearing free play in the control system, is 2.5% * 3.25 in = 0.081 in (maximum).</p>
