added inspection for SL370

--- a/html/Inspection/Insp_MAIN LANDING GEAR AND BRAKES.html
+++ b/html/Inspection/Insp_MAIN LANDING GEAR AND BRAKES.html
@@ -39,4 +39,9 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Check torque on main gear attach bolts. (See <xref sectionTarget="2.90.4" prependLabel="Section"></xref>).</td>
   </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG504</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check master cylinder attachment lug for elongated hole and looseness.  (Ref. SL370).</td>
+  </tr>
 </table>
