--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -102,7 +102,7 @@
         Reassemble and install fuel filter assembly with new seal beneath cap (Fram p/n SP238629).
     </li>
     <li>
-        Replace crush washer and torque center bolt on top of fuel filter assembly to 12 - 14 ft.lbs. (144 - 168 in.lbs.).
+        Replace crush washer (Ref. SL360) and torque center bolt on top of fuel filter assembly to 12 - 14 ft.lbs. (144 - 168 in.lbs.).
     </li>
     <li>
         Install safety wire.
