--- a/html/Maintenance/Cockpit Cleaning and Maintenance.html
+++ b/html/Maintenance/Cockpit Cleaning and Maintenance.html
@@ -1,1 +1,2 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p><b>Loose Items</b></p>
+<p>Loose items in the cockpit are hazardous because they could cause interference with flight controls or become projectiles.  Loose items must be removed from the cockpit or properly stowed.</p>
