correct part number

--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -31,8 +31,8 @@
         <td class="plainTableNormalCell">&nbsp;</td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS148-72</td>
-        <td class="plainTableNormalCell">Axle Attach</td>
+        <td class="plainTableNormalCell">NAS148-73**</td>
+        <td class="plainTableNormalCell">Axle Attach Bolts</td>
         <td class="plainTableNormalCell">3000 Hours</td>
         <td class="plainTableNormalCell">&nbsp;</td>
     </tr>
