--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -15,19 +15,7 @@
         <td class="plainTableNormalCell"><xref sectionTarget="2.70.51" xrefType="link", prependLabel="Section">Cross Reference Placeholder</xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">TODO</td>
-        <td class="plainTableNormalCell">Propeller Overhaul</td>
-        <td class="plainTableNormalCell">per Hartzell</td>
-        <td class="plainTableNormalCell">Hartzell Service Letter HC-SL-61-61Y</td>
-    </tr>
-    <tr>
-        <td class="plainTableNormalCell">PT6A-65AG</td>
-        <td class="plainTableNormalCell">Engine Overhaul</td>
-        <td class="plainTableNormalCell">per PWC</td>
-        <td class="plainTableNormalCell">Pratt and Whitney Canada SB....</td>
-    </tr>
-    <tr>
-        <td class="plainTableNormalCell">BA..TODO</td>
+        <td class="plainTableNormalCell">BA-413E</td>
         <td class="plainTableNormalCell">Brackett Engine Air Filter (Foam)</td>
         <td class="plainTableNormalCell">12 Months</td>
         <td class="plainTableNormalCell">&nbsp;</td>
@@ -85,60 +73,45 @@
         <th class="plainTableHeaderCell">Reference</tr>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS156A129</td>
+        <td class="plainTableNormalCell">NAS156-130**</td>
         <td class="plainTableNormalCell">Fwd Main Gear Clamp Block</td>
         <td class="plainTableNormalCell">1500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS154DH59</td>
+        <td class="plainTableNormalCell">NAS154DH59**</td>
         <td class="plainTableNormalCell">Aft Main Gear Clamp Block</td>
         <td class="plainTableNormalCell">1500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS158A106</td>
+        <td class="plainTableNormalCell">NAS158A106**</td>
         <td class="plainTableNormalCell">Inbd Main Gear Large Bolt</td>
         <td class="plainTableNormalCell">1500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS148-72</td>
-        <td class="plainTableNormalCell">Axle Attach</td>
+        <td class="plainTableNormalCell">NAS148-73**</td>
+        <td class="plainTableNormalCell">Axle Attach Bolts</td>
         <td class="plainTableNormalCell">1500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS148-69</td>
+        <td class="plainTableNormalCell">NAS148-73</td>
         <td class="plainTableNormalCell">Tail Spring Clamp Bolts</td>
         <td class="plainTableNormalCell">1500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS1308-34</td>
+        <td class="plainTableNormalCell">NAS1308-36</td>
         <td class="plainTableNormalCell">Tail Spring Forward Bolt</td>
         <td class="plainTableNormalCell">500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS154DH320</td>
+        <td class="plainTableNormalCell">NAS154DH32</td>
         <td class="plainTableNormalCell">Aft End Tail Spring Bolts</td>
         <td class="plainTableNormalCell">1500 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
-    </tr>
-</table>
-
-<p>In addition, Air Tractor suggests that the following inspections and actions be taken at the intervals shown.</p>
-
-<table class="plainTableLarge">
-    <tr>
-        <th class="plainTableHeaderCell">Description</th>
-        <th class="plainTableHeaderCell">Interval</th>
-        <th class="plainTableHeaderCell">Reference</th>
-    </tr>
-    <tr>
-        <td class="plainTableNormalCell">Change Engine Oil</td>
-        <td class="plainTableNormalCell">per PWC</td>
-        <td class="plainTableNormalCell">Pratt and Whitney Canada SB....</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
 </table>
