--- a/html/Maintenance/MAIN AND TAIL GEAR ATTACH BOLTS.html
+++ b/html/Maintenance/MAIN AND TAIL GEAR ATTACH BOLTS.html
@@ -16,5 +16,79 @@
     1/8" bolt attaching the main gear leg, change it immediately.
 </p>
 
-<p>Main and tail gear attachment bolt fatigue lives are listed in <xref sectionTarget="2.200" prependLabel="Section">
-    </xref>.</p>
+<p>
+    Main and tail gear attachment bolt fatigue lives are listed in 
+    <xref sectionTarget="2.200" prependLabel="Section"></xref>. 
+</p>
+
+
+
+
+<p><b>Main Gear Bolts</b></p>
+<p>
+    The main gear bolts vary in length depending on the width of the gear spring and any shims installed, see
+    <xref fileTarget="img_MainGearAttachBolts1.png"></xref> and 
+    <xref fileTarget="img_MainGearAttachBolts2.png"></xref>
+    .  
+</p>
+
+<figure>
+    <img class="imageCentered_4x4" src="img/img_MainGearAttachBolts1.png">
+    <figcaption class="centerText">Main Gear Attach Bolts (Side View)</figcaption>
+</figure>
+<figure>
+    <img class="imageCentered_4x4" src="img/img_MainGearAttachBolts2.png">
+    <figcaption class="centerText">Main Gear Attach Bolts</figcaption>
+</figure>
+
+<p>Bolt part numbers vary as shown below:</p>
+
+<table class="plainTableMedium">
+    <tr>
+        <th class="plainTableHeaderCell">Position</th>
+        <th class="plainTableHeaderCell">Bolt PN's</th>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">Fwd Main Gear Clamp Block Bolt</td>
+        <td class="plainTableNormalCell">NAS156-130 - XXXXX or NAS156A130 - XXXXX</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">Aft Main Gear Clamp Block Bolt</td>
+        <td class="plainTableNormalCell">NAS154DH59 - XXXXX</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">Inbd Main Gear Large Bolt</td>
+        <td class="plainTableNormalCell">NAS158A106 - XXXXX</td>
+    </tr>
+</table>
+<p>If you are just replacing bolts, you should be able to replace with the same length.  Contact Air Tractor customer service for advice and parts.</p>
+
+
+
+
+<p><b>Main Gear Axle Attach Bolts</b></p>
+<p>
+    The main gear axle attach bolts may vary in length depending on the thickness of the gear leg and the shims that need to be installed, see 
+    <xref fileTarget="img_MainWheelAxleAttachBolts.png"></xref>
+</p>
+
+<figure>
+    <img class="imageCentered_4x4" src="img/img_MainWheelAxleAttachBolts.png">
+    <figcaption class="centerText">Main Wheel Axle Attach Bolts</figcaption>
+</figure>
+
+<p>Bolt part numbers vary from NAS148-72 to NAS148-77.</p>
+<p>If you are just replacing bolts, you should be able to replace with the same length.  Contact Air Tractor customer service for advice and parts.</p>
+
+
+
+
+<p><b>Tail Gear Bolts</b></p>
+<p>The tail gear bolts are shown in <xref fileTarget="img_TailGearBolts.png"></xref>.</p>
+
+<figure>
+    <img class="imageCentered_6x6" src="img/img_TailGearBolts.png">
+    <figcaption class="centerText">Tail Gear Bolts</figcaption>
+</figure>
+
+<p>Due to spring thickness and shim variations, the clamp bolts vary from NAS148-69 to NAS148-73.  Contact Air Tractor customer service for advice and parts.</p>
