--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -7,52 +7,52 @@
         <th class="plainTableHeaderCell">Reference</tr>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">30775-1</td>
+        <td class="plainTableNormalCell">C100168-4 </td>
         <td class="plainTableNormalCell">Overhaul Flap Actuator</td>
         <td class="plainTableNormalCell">400 Hours</td>
-        <td class="plainTableNormalCell">SIL 802-0024, </td>
+        <td class="plainTableNormalCell">SIL 802-0021A, SIL 802-0050</td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS156A129</td>
+        <td class="plainTableNormalCell">NAS156-130**</td>
         <td class="plainTableNormalCell">Fwd Main Gear Clamp Block</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS154DH59</td>
+        <td class="plainTableNormalCell">NAS154DH59**</td>
         <td class="plainTableNormalCell">Aft Main Gear Clamp Block</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS158A106</td>
+        <td class="plainTableNormalCell">NAS158A106**</td>
         <td class="plainTableNormalCell">Inbd Main Gear Large Bolt</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">NAS148-73**</td>
         <td class="plainTableNormalCell">Axle Attach Bolts</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS148-69</td>
+        <td class="plainTableNormalCell">NAS148-73</td>
         <td class="plainTableNormalCell">Tail Spring Clamp Bolts</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS1308-34</td>
+        <td class="plainTableNormalCell">NAS1308-36</td>
         <td class="plainTableNormalCell">Tail Spring Forward Bolt</td>
         <td class="plainTableNormalCell">1000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS154DH320</td>
+        <td class="plainTableNormalCell">NAS154DH32</td>
         <td class="plainTableNormalCell">Aft End Tail Spring Bolts</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">&nbsp;</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">AN47-30A</td>
@@ -68,7 +68,7 @@
     </tr>
     <tr>
         <td class="plainTableNormalCell">53474-1</td>
-        <td class="plainTableNormalCell">Air Filter</td>
+        <td class="plainTableNormalCell">Air Filter (XFlow)</td>
         <td class="plainTableNormalCell">15 Cleaning and Oiling Cycles</td>
         <td class="plainTableNormalCell">OM Supplement 04-0167, <xref sectionTarget="2.50.50" prependLabel="Section">Cross Reference Placeholder</xref></td>
     </tr>
