added clamp block inspection

--- a/html/Inspection/Insp_HARD OR HEAVY LANDING INSPECTION.html
+++ b/html/Inspection/Insp_HARD OR HEAVY LANDING INSPECTION.html
@@ -7,7 +7,7 @@
         replace both main landing gear and associated mounting hardware.
     </li>
     <li>
-        Inspect main landing gear clamp blocks for straightness per <span style="color: red;">This referred to a straightness check in the manual that doesn't exist...need to add a procedure!</span>
+        Inspect main landing gear clamp blocks for straightness per <xref sectionTarget="2.90.50" prependLabel="Section"></xref>.
     </li>
     <li>
         Inspect main landing gear attach structure for damage.
