add asterisk for variable length

--- a/html/Maintenance/Suggested Time Limits.html
+++ b/html/Maintenance/Suggested Time Limits.html
@@ -97,7 +97,7 @@
         <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS148-73</td>
+        <td class="plainTableNormalCell">NAS148-73**</td>
         <td class="plainTableNormalCell">Tail Spring Clamp Bolts</td>
         <td class="plainTableNormalCell">1500 Hours</td>
         <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
