--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -37,7 +37,7 @@
         <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
     </tr>
     <tr>
-        <td class="plainTableNormalCell">NAS148-73</td>
+        <td class="plainTableNormalCell">NAS148-73**</td>
         <td class="plainTableNormalCell">Tail Spring Clamp Bolts</td>
         <td class="plainTableNormalCell">3000 Hours</td>
         <td class="plainTableNormalCell"><xref sectionTarget="2.90.16" prependLabel="Section"></xref></td>
